# KulkarNIX

./: .gitignore  CMakeLists.txt  CreateImg.sh  Makefile  Setup.sh  build.bat  build.sh  build.zig  compile_commands.json  debug.bat  debug.sh  release.bat  run.bat  setup.sh  sym
Arch/: Makefile
Arch/arm64/: CMakeLists.txt
Arch/arm64/Bootloader/FirstStage/: CMakeLists.txt  Globals.inc  Makefile
Arch/arm64/Bootloader/SecondStage/: Makefile  SecondStage.c  SecondStage.cpp  SecondStage.h  boot_main.cpp  boot_main.h  x86.cpp
Arch/arm64/HAL/: CMakeLists.txt
Arch/arm64/HAL/Src/: x86.cpp
Arch/arm64/UEFI/: main.c
Arch/i686/: Makefile
Arch/i686/Bootloader/FirstStage/: A20.asm  Globals.asm  Globals.inc  MMap.asm
Arch/i686/Bootloader/SecondStage/: CMakeLists.txt  KPrint.h  Makefile  SecondStage.c  SecondStage.h  SecondStageHelper.s  x86.c
Arch/i686/HAL/: Makefile  x86.c
Arch/i686/HAL/Inc/: Interrupts.h
Arch/i686/UEFI/: Makefile  data.c  main.c
Arch/x64/: CMakeLists.txt
Arch/x64/Bootloader/SecondStage/: IIStageBootloader.asm  boot_main.cpp
Arch/x64/HAL/src/: Paging.cpp  x86.cpp
Arch/x86_64/Bootloader/FirstStage/: Globals.asm  IStageBootloader.asm
Arch/x86_64/Bootloader/SecondStage/: CMakeLists.txt  Makefile  Paging.h  boot_main.cpp  boot_main.h  boot_main.s
Arch/x86_64/HAL/: CMakeLists.txt
Arch/x86_64/HAL/Src/: Paging.cpp
Bootloader/: BootLoader.asm  Debugging.asm  Globals.asm  IIStageBootloader.asm  IO.asm
Bootloader/FirstStage/: A20.asm  CMakeLists.txt  Globals.asm  IStageBootloader.asm  MMap.asm  Makefile
Bootloader/SecondStage/: CMakeLists.txt  Debug.h  Harddisk.cpp  Harddisk.h  IIStageBootloader.asm  Makefile  Port.cpp  Port.h  boot_main.c  boot_main.cpp  boot_main.h  elfheader.h  linker.ld  typedefs.h  x86.cpp  x86.h
Common/: Debug.h  typedefs.h
Common/Debug/: Debug.cpp  Debug.h  Makefile
DebugUtils/: CMakeLists.txt  Debug.cpp  debug.h
Docs/: Arch.org  Prequsits
HAL/: IDT.asm  IDT.c  IDT.cc  IDT.cpp  IDT.h  IDTlib.h  Interrupts.c  Interrupts.cpp  Interrupts.h  Makefile  PIC.cpp  Paging.cpp  x86.c  x86.cpp  x86.h
HAL/LibHAL/: Makefile  x86.cpp
HAL/LibIDT/: IDT.cpp  Makefile
Inc/: KStdArgs.h  KulkarNIX.h  elfheader.h  typedefs.h
Inc/Arch/arm64/: MemoryMap.h  SegmentDescriptor.h  elfheader.h  typedefs.h  x86.h
Inc/Arch/arm64/HAL/: APIC.h  Paging.h
Inc/Arch/i686/: Paging.h  typedefs.h  x86.h
Inc/Arch/i686/HAL/: APIC.h  PIC.h  PIO.h
Inc/Arch/x86_64/: GDT.h  Paging.h  SegmentDescriptor.h
Inc/Arch/x86_64/HAL/: Paging.h
Inc/Debug/: Makefile
Include/: Paging.h
Include/HAL/: HAL.h  IDT.h  PIC.h  Paging.h  x86.h
Kernel/: CMakeLists.txt  KEntry.c  KEntry.h  KInclude.h  KInterrupts.c  KIntr.c  KIntr.h  KPIC.c  KPIC.h  KPrint.c  KPrint.h  Kernel.asm  Linker.ld  Makefile  Paging.asm  Paging.cpp  kentry.asm  kernel.c  kernel.cpp  kmain.cpp  linker.ld  phyMM.cpp  phyMM.h
Utils/: Run.sh  Setup.sh  gdb_start_cmds
arch/: CMakeLists.txt  Makefile
arch/amd64/: main.c
arch/arm64/Bootloader/: Makefile
arch/arm64/Bootloader/FirstStage/: IStageBootloader.asm  MMap.asm  MMap.inc
arch/arm64/Bootloader/SecondStage/: x86.c
arch/arm64/HAL/Inc/: IDTlib.h
arch/arm64/HAL/Src/: APIC.cpp  Interrupts.cpp  Paging.cpp
arch/arm64/UEFI/: Makefile
arch/i686/: Makefile
arch/i686/Bootloader/: CMakeLists.txt
arch/i686/Bootloader/FirstStage/: IStageBootloader.asm
arch/i686/Bootloader/SecondStage/: KPrint.c  SecondStage.c  SecondStage.h  linker.ld
arch/i686/HAL/: Makefile  x86.c
arch/x64/Bootloader/FirstStage/: Makefile
arch/x64/Bootloader/SecondStage/: CMakeLists.txt  linker.ld
arch/x64/HAL/src/: PIC.cpp  PIO.cpp
arch/x86_64/: CMakeLists.txt
arch/x86_64/Bootloader/FirstStage/: IStageBootloader.asm
arch/x86_64/Bootloader/SecondStage/: #boot_main.cpp#  CMakeLists.txt
arch/x86_64/HAL/: CMakeLists.txt
arch/x86_64/HAL/src/: Interrupts.cpp  PIC.cpp
arch/x86_64/bootloader/SecondStage/: CMakeLists.txt  boot_main.cpp
boot/: kargs.zig  main.c  main.cpp  main.zig  memory.zig  paging.zig  screen.zig  serial.zig
disk/: NvVars
inc/: KStdArgs.h  KulkarNIX.h  elfheader.h  typedefs.h
inc/Arch/arm64/: Paging.h  x86.h
inc/Arch/i686/: Paging.h  elfheader.h  typedefs.h
inc/Debug/: Debug.cpp
inc/arch/x86_64/HAL/: Paging.h
kernel/: .#pmem.zig  CMakeLists.txt  KEntry.c  KInclude.h  KIntr.c  KMemMap.h  KPIC.h  KPrint.c  KPrint.h  Makefile  gdt.zig  hal.zig  heap.zig  kargs.zig  kerrors.zig  kstate.zig  linker.ld  main.c  main.cpp  main.zig  paging.zig  pmem.zig  segment.zig  serial.zig
kernel/MM/: KMemMap.c  KMemMap.h  KPhysical.c  KPhysical.h
mm/: memory.cpp  memory.h
utils/: #mkimage.sh#  Run.sh  helper.py  mkimage.sh  run_qemu.sh  run_qemu_rel.sh  windows.bat
