ADD_EXECUTABLE(Kernel.bin kernel.cpp)

TARGET_INCLUDE_DIRECTORIES(Kernel.bin PRIVATE ${CMAKE_SOURCE_DIR}/Inc ${KNIX_ARCH_INCLUDE})

TARGET_LINK_OPTIONS(Kernel.bin PRIVATE -T ${CMAKE_CURRENT_SOURCE_DIR}/linker.ld)

TARGET_LINK_LIBRARIES(Kernel.bin KLibHAL)

ADD_CUSTOM_COMMAND(TARGET Kernel.bin
  POST_BUILD
  COMMAND mv Kernel.bin ${KNIX_OUTPUT_DIR})
