SET(CMAKE_ASM_NASM_OBJECT_FORMAT bin)
SET(CMAKE_ASM_NASM_LINK_EXECUTABLE "mv <OBJECTS> ${KNIX_OUTPUT_DIR}/<TARGET>")
ENABLE_LANGUAGE(ASM_NASM)

SET(SRC_FILES IStageBootloader.asm)
ADD_EXECUTABLE(IStageBootloader.bin ${SRC_FILES})

TARGET_COMPILE_OPTIONS(IStageBootloader.bin PRIVATE "-I ${CMAKE_CURRENT_SOURCE_DIR}/")
