SET(CMAKE_ASM_NASM_OBJECT_FORMAT elf64)
ENABLE_LANGUAGE(ASM_NASM)

SET(ASM_SRC_FILES IIStageBootloader.asm)
SET(CXX_SRC_FILES boot_main.cpp x86.cpp)
ADD_EXECUTABLE(Boot.bin ${ASM_SRC_FILES} ${CXX_SRC_FILES})

TARGET_INCLUDE_DIRECTORIES(Boot.bin PRIVATE ${KNIX_ARCH_INCLUDE} ${KNIX_ROOT_INC})
SET_TARGET_PROPERTIES(Boot.bin PROPERTIES LINK_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/linker.ld")

TARGET_LINK_OPTIONS(Boot.bin PRIVATE -T ${CMAKE_CURRENT_SOURCE_DIR}/linker.ld -ffreestanding -nostdlib -lgcc)

ADD_CUSTOM_COMMAND(TARGET Boot.bin
  POST_BUILD
  COMMAND mv Boot.bin ${KNIX_OUTPUT_DIR})
