ADD_EXECUTABLE(Boot.bin boot_main.cpp x86.cpp)

TARGET_INCLUDE_DIRECTORIES(Boot.bin PRIVATE ${KNIX_ARCH_INCLUDE} ${KNIX_ROOT_INC})

TARGET_LINK_OPTIONS(Boot.bin PRIVATE -T ${CMAKE_CURRENT_SOURCE_DIR}/linker.ld)

ADD_CUSTOM_COMMAND(TARGET Boot.bin
  POST_BUILD
  COMMAND mv Boot.bin ${KNIX_OUTPUT_DIR})
